--- a/main.html
+++ b/main.html
@@ -1,16 +1,31 @@
+	
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+	  	<!-- the entire body must be written by student -->
+    <form>
+      <input id="name" type="text" placeholder="Name" />
+      <input id="phone" type="text" placeholder="Phone number" />
+      <input id="address" type="text" placeholder="Address" />
+      <label
+        ><input
+          type="checkbox"
+          id="checkbox"
+          value=" Have you ever lived with a dog before?"
+        />
+        Have you ever lived with a dog before?</label
+      >
+      <select id="multiSelect">
+        <option>pupy</option>
+        <option>pug</option>
+        <option>beagle</option>
+      </select>
+      <input type="submit" id="submit" value="Submit">
+    </form>
+  </body>
 </html>
