--- a/main.html
+++ b/main.html
@@ -16,9 +16,9 @@
         ><input
           type="checkbox"
           id="checkbox"
-          value=" Have you ever lived with a dog before?"
+          value=" Have you ever lived with a Dog before?"
         />
-        Have you ever lived with a dog before?</label
+        Have you ever lived with a Dog before?</label
       >
       <select id="multiSelect">
         <option>pupy</option>
