--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	  	<!-- the entire body must be written by student -->
     <form>
       <input id="name" type="text" placeholder="Name" />
-      <input id="phone" type="text" placeholder="Phone number" />
+      <input id="phone" type="text" placeholder="Phone Number" />
       <input id="address" type="text" placeholder="Address" />
       <label
         ><input
