--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         ><input
           type="checkbox"
           id="checkbox"
-          value=" Have you ever lived with a Dog before?"
+          value=""Have you ever lived with a Dog before?""
         />
         Have you ever lived with a Dog before?</label
       >
